--- a/site/index.html
+++ b/site/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html
-  <head
-    <meta charset="utf-8"
-    <meta content="width=device-width, initial-scale=1" name="viewport"
-    <link href="/css/site.css" rel="stylesheet" type="text/css"
-    <link href="/css/react-select.css" rel="stylesheet" type="text/css"
-  </head
-  <body class="body-container"
-    <div id="app"
-      <h3>ClojureScript has not been compiled!</h3
-      <p>please run <b>lein figwheel</b> in order to start the compiler</p
-    </div
-    <script src="/js/app.js" type="text/javascript"
-    </script
-  </body
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href="/css/site.css" rel="stylesheet" type="text/css">
+    <link href="/css/react-select.css" rel="stylesheet" type="text/css">
+  </head>
+  <body class="body-container">
+    <div id="app">
+      <h3>Loading! Giz a sec...</h3>
+    </div>
+    <script src="/js/app.js" type="text/javascript"></script>
+  </body>
 </html>
