--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
+
+    <base href="/wt/" target="_blank">
+
     <link href="/css/site.css" rel="stylesheet" type="text/css">
     <link href="/css/react-select.css" rel="stylesheet" type="text/css">
   </head>
