--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
-    <base href="/wt/" target="_blank">
+    <base href="https://philjackson.github.io/wt/" target="_blank">
 
     <link href="/css/site.css" rel="stylesheet" type="text/css">
     <link href="/css/react-select.css" rel="stylesheet" type="text/css">
