Add manual paths to index.

--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
-    <base href="https://philjackson.github.io/wt/" target="_blank">
-
-    <link href="/css/site.css" rel="stylesheet" type="text/css">
-    <link href="/css/react-select.css" rel="stylesheet" type="text/css">
+    <link href="/wt/css/site.css" rel="stylesheet" type="text/css">
+    <link href="/wt/css/react-select.css" rel="stylesheet" type="text/css">
   </head>
   <body class="body-container">
     <div id="app">
       <h3>Loading! Giz a sec...</h3>
     </div>
-    <script src="/js/app.js" type="text/javascript"></script>
+    <script src="/wt/js/app.js" type="text/javascript"></script>
   </body>
 </html>
